Fix drawer display on mobile by using MobileSwipeContainer

--- a/platform-ui-skin/src/main/webapp/skin/less/_responsive.less
+++ b/platform-ui-skin/src/main/webapp/skin/less/_responsive.less
@@ -1523,13 +1523,9 @@
         max-width: ~"calc(100% - 20px)" !important;
         margin: 0 !important;
         padding: 0 !important;
-  
-        &.active {
-          display: block;
-        }
-  
+
         &:not(.active) {
-          display: none;
+          right: 100vw;
         }
       }
     }
